@@ -1,250 +1,107 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class pt {
-   public static final ahg<eax> a = pm.a("village/taiga/town_centers");
-   private static final ahg<eax> b = pm.a("village/taiga/terminators");
+   public static ebe.c a(in<cwm> $$0, Map<boj, ebl> $$1, dqk.b $$2, ebp $$3) {
+      return new ebe.c($$0, $$1, $$2, $$3);
+   }
 
-   public static void a(pf<eax> $$0) {
-      ii<dys> $$1 = $$0.a(ke.aC);
-      ih<dys> $$2 = $$1.b(rc.h);
-      ih<dys> $$3 = $$1.b(rc.i);
-      ih<dys> $$4 = $$1.b(rc.e);
-      ih<dys> $$5 = $$1.b(rc.l);
-      ih<dys> $$6 = $$1.b(rc.m);
-      ii<edm> $$7 = $$0.a(ke.aE);
-      ih<edm> $$8 = $$7.b(pn.f);
-      ih<edm> $$9 = $$7.b(pn.d);
-      ih<edm> $$10 = $$7.b(pn.k);
-      ih<edm> $$11 = $$7.b(pn.o);
-      ii<eax> $$12 = $$0.a(ke.aG);
-      ih<eax> $$13 = $$12.b(pm.a);
-      ih<eax> $$14 = $$12.b(b);
+   private static ebe.c a(in<cwm> $$0, dqk.b $$1, ebp $$2) {
+      return a($$0, Map.of(), $$1, $$2);
+   }
+
+   private static ebe.c a(in<cwm> $$0, ebp $$1) {
+      return a($$0, Map.of(), dqk.b.e, $$1);
+   }
+
+   public static void a(ph<ebe> $$0) {
+      ik<cwm> $$1 = $$0.a(kg.at);
+      ik<ecn> $$2 = $$0.a(kg.aG);
       $$0.a(
-         a,
-         new eax(
-            $$13,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(eav.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(eav.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(eav.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            eax.a.b
+         eay.a,
+         new ede(
+            a($$1.b(aty.y), Map.of(boj.a, new ebl(ebl.a.b, bki.a(new cwy.c(bnu.aA, 1, 1, 1)))), dqk.b.e, ebp.c), $$2.b(pm.a), 7, dzk.a(dri.a(0)), true, dqo.a.a
          )
       );
-      pm.a(
-         $$0,
-         "village/taiga/streets",
-         new eax(
-            $$14,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(eav.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(eav.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(eav.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(eav.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(eav.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(eav.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(eav.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(eav.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(eav.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(eav.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(eav.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(eav.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(eav.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(eav.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(eav.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            eax.a.a
-         )
-      );
-      pm.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new eax(
-            $$14,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(eav.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(eav.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(eav.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(eav.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(eav.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(eav.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(eav.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(eav.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(eav.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(eav.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            eax.a.a
-         )
-      );
-      pm.a(
-         $$0,
-         "village/taiga/houses",
-         new eax(
-            $$14,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(eav.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(eav.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(eav.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(eav.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(eav.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(eav.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(eav.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(eav.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(eav.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(eav.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(eav.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(eav.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(eav.g(), 6)
-               }
-            ),
-            eax.a.b
-         )
-      );
-      pm.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new eax(
-            $$14,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(eav.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(eav.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(eav.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(eav.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(eav.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(eav.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(eav.g(), 6)
-               }
-            ),
-            eax.a.b
-         )
-      );
+      $$0.a(eay.b, new edi(a($$1.b(aty.t), dqk.b.d, ebp.a), edi.a.a));
+      $$0.a(eay.c, new edi(a($$1.b(aty.u), dqk.b.d, ebp.a), edi.a.b));
+      $$0.a(eay.d, new eea(a($$1.b(aty.Q), ebp.a)));
+      $$0.a(eay.e, new edg(a($$1.b(aty.s), ebp.a)));
+      $$0.a(eay.f, new ecz(a($$1.b(aty.q), ebp.a)));
+      $$0.a(eay.g, new edd(a($$1.b(aty.r), ebp.a)));
+      $$0.a(eay.h, new edu(a($$1.b(aty.G), ebp.a), false));
+      $$0.a(eay.i, new edu(a($$1.b(aty.F), ebp.a), true));
       $$0.a(
-         b,
-         new eax(
-            $$13,
-            ImmutableList.of(
-               Pair.of(eav.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(eav.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(eav.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(eav.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            eax.a.a
+         eay.j,
+         new edy(
+            a(
+               $$1.b(aty.J),
+               Map.of(boj.a, new ebl(ebl.a.a, bki.a(new cwy.c(bnu.bm, 1, 1, 1))), boj.b, new ebl(ebl.a.a, bki.a(new cwy.c(bnu.o, 1, 1, 1)))),
+               dqk.b.e,
+               ebp.a
+            )
          )
       );
-      pm.a(
-         $$0,
-         "village/taiga/decor",
-         new eax(
-            $$13,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(eav.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(eav.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(eav.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(eav.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(eav.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(eav.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(eav.a($$2), 4),
-               Pair.of(eav.a($$3), 4),
-               Pair.of(eav.a($$4), 2),
-               Pair.of(eav.a($$5), 4),
-               Pair.of(eav.a($$6), 1),
-               new Pair[]{Pair.of(eav.g(), 4)}
-            ),
-            eax.a.b
+      $$0.a(eay.k, new edw(a($$1.b(aty.H), ebp.b)));
+      $$0.a(
+         eay.l,
+         new edo(
+            a(
+               $$1.b(aty.v),
+               Map.of(boj.a, new ebl(ebl.a.b, bki.a(new cwy.c(bnu.X, 1, 2, 4))), boj.e, new ebl(ebl.a.b, cwy.a), boj.d, new ebl(ebl.a.b, cwy.a)),
+               dqk.b.e,
+               ebp.a
+            )
          )
       );
-      pm.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new eax(
-            $$13,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(eav.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(eav.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(eav.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(eav.a($$2), 4),
-               Pair.of(eav.a($$3), 4),
-               Pair.of(eav.a($$4), 2),
-               Pair.of(eav.a($$5), 4),
-               Pair.of(eav.a($$6), 1),
-               Pair.of(eav.g(), 4)
-            ),
-            eax.a.b
+      $$0.a(eay.m, new edq(a($$1.b(aty.w), ebp.a), edq.a.b, 0.3F, 0.9F));
+      $$0.a(eay.n, new edq(a($$1.b(aty.x), ebp.a), edq.a.a, 0.3F, 0.9F));
+      $$0.a(eay.o, new edk(a($$1.b(aty.R), Map.of(boj.a, new ebl(ebl.a.a, edk.d)), dqk.b.h, ebp.a)));
+      $$0.a(eay.p, new edm(a($$1.b(aty.S), dqk.b.h, ebp.c), dzo.a(dri.a(32), dri.c(2))));
+      $$0.a(eay.q, new edb(a($$1.b(aty.W), ebp.a)));
+      $$0.a(eay.r, new ecx(a($$1.b(aty.p), dqk.b.d, ebp.a)));
+      $$0.a(eay.s, new ede(a($$1.b(aty.T), ebp.a), $$2.b(pd.a), 6, dzk.a(dri.a(33)), false));
+      $$0.a(eay.t, new ede(a($$1.b(aty.L), ebp.c), $$2.b(pn.a), 6, dzk.a(dri.a(0)), true, dqo.a.a));
+      $$0.a(eay.u, new ede(a($$1.b(aty.K), ebp.c), $$2.b(pj.a), 6, dzk.a(dri.a(0)), true, dqo.a.a));
+      $$0.a(eay.v, new ede(a($$1.b(aty.M), ebp.c), $$2.b(pq.a), 6, dzk.a(dri.a(0)), true, dqo.a.a));
+      $$0.a(eay.w, new ede(a($$1.b(aty.N), ebp.c), $$2.b(pr.a), 6, dzk.a(dri.a(0)), true, dqo.a.a));
+      $$0.a(eay.x, new ede(a($$1.b(aty.O), ebp.c), $$2.b(pv.a), 6, dzk.a(dri.a(0)), true, dqo.a.a));
+      $$0.a(
+         eay.y,
+         new eds(
+            a($$1.b(aty.E), ebp.a),
+            List.of(new eds.a(edr.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new eds.a(edr.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      pm.a(
-         $$0,
-         "village/taiga/villagers",
-         new eax(
-            $$13,
-            ImmutableList.of(
-               Pair.of(eav.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(eav.a("village/taiga/villagers/baby"), 1),
-               Pair.of(eav.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            eax.a.b
+      $$0.a(eay.z, new eds(a($$1.b(aty.z), ebp.a), new eds.a(edr.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
+      $$0.a(eay.A, new eds(a($$1.b(aty.A), ebp.a), new eds.a(edr.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
+      $$0.a(eay.B, new eds(a($$1.b(aty.C), ebp.a), new eds.a(edr.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
+      $$0.a(
+         eay.C,
+         new eds(
+            a($$1.b(aty.D), ebp.a),
+            List.of(new eds.a(edr.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new eds.a(edr.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      pm.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new eax(
-            $$13,
-            ImmutableList.of(Pair.of(eav.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(eav.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            eax.a.b
+      $$0.a(eay.D, new eds(a($$1.b(aty.B), ebp.a), new eds.a(edr.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
+      $$0.a(eay.E, new eds(a($$1.b(aty.V), ebp.a), new eds.a(edr.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
+      $$0.a(
+         eay.F,
+         new ede(
+            a($$1.b(aty.U), Arrays.stream(boj.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new ebl(ebl.a.b, bki.c()))), dqk.b.h, ebp.d),
+            $$2.b(oy.a),
+            Optional.of(new aiy("city_anchor")),
+            7,
+            dzk.a(dri.a(-27)),
+            false,
+            Optional.empty(),
+            116,
+            List.of()
          )
       );
+      $$0.a(eay.G, new ede(a($$1.b(aty.P), Map.of(), dqk.b.d, ebp.b), $$2.b(px.a), 7, dzk.a(dri.a(-15)), false, dqo.a.a));
    }
 }
