@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class ql {
-   public static final ahg<drp<?, ?>> a = qk.a("ice_spike");
-   public static final ahg<drp<?, ?>> b = qk.a("ice_patch");
-   public static final ahg<drp<?, ?>> c = qk.a("forest_rock");
-   public static final ahg<drp<?, ?>> d = qk.a("iceberg_packed");
-   public static final ahg<drp<?, ?>> e = qk.a("iceberg_blue");
-   public static final ahg<drp<?, ?>> f = qk.a("blue_ice");
-   public static final ahg<drp<?, ?>> g = qk.a("lake_lava");
-   public static final ahg<drp<?, ?>> h = qk.a("disk_clay");
-   public static final ahg<drp<?, ?>> i = qk.a("disk_gravel");
-   public static final ahg<drp<?, ?>> j = qk.a("disk_sand");
-   public static final ahg<drp<?, ?>> k = qk.a("freeze_top_layer");
-   public static final ahg<drp<?, ?>> l = qk.a("disk_grass");
-   public static final ahg<drp<?, ?>> m = qk.a("bonus_chest");
-   public static final ahg<drp<?, ?>> n = qk.a("void_start_platform");
-   public static final ahg<drp<?, ?>> o = qk.a("desert_well");
-   public static final ahg<drp<?, ?>> p = qk.a("spring_lava_overworld");
-   public static final ahg<drp<?, ?>> q = qk.a("spring_lava_frozen");
-   public static final ahg<drp<?, ?>> r = qk.a("spring_water");
+   public static final aix<dtf<?, ?>> a = qm.a("end_spike");
+   public static final aix<dtf<?, ?>> b = qm.a("end_gateway_return");
+   public static final aix<dtf<?, ?>> c = qm.a("end_gateway_delayed");
+   public static final aix<dtf<?, ?>> d = qm.a("chorus_plant");
+   public static final aix<dtf<?, ?>> e = qm.a("end_island");
 
-   public static void a(pf<drp<?, ?>> $$0) {
-      qk.a($$0, a, dsc.s);
-      qk.a($$0, b, dsc.G, new dud(dwp.a(cxa.iC), dqf.c(List.of(cxa.j, cxa.i, cxa.l, cxa.k, cxa.fl, cxa.dP, cxa.dO)), bjn.a(2, 3), 1));
-      qk.a($$0, c, dsc.F, new dtz(cxa.cn.o()));
-      qk.a($$0, d, dsc.E, new dtz(cxa.iC.o()));
-      qk.a($$0, e, dsc.E, new dtz(cxa.mW.o()));
-      qk.a($$0, f, dsc.D);
-      qk.a($$0, g, dsc.H, new dsr.a(dwh.a(cxa.H.o()), dwh.a(cxa.b.o())));
-      qk.a($$0, h, dsc.G, new dud(dwp.a(cxa.dR), dqf.c(List.of(cxa.j, cxa.dR)), bjn.a(2, 3), 1));
-      qk.a($$0, i, dsc.G, new dud(dwp.a(cxa.L), dqf.c(List.of(cxa.j, cxa.i)), bjn.a(2, 5), 2));
-      qk.a(
-         $$0, j, dsc.G, new dud(new dwp(dwh.a(cxa.I), List.of(new dwp.a(dqf.a(ic.a.q(), cxa.a), dwh.a(cxa.aV)))), dqf.c(List.of(cxa.j, cxa.i)), bjn.a(2, 6), 2)
-      );
-      qk.a($$0, k, dsc.u);
-      qk.a(
-         $$0,
-         l,
-         dsc.G,
-         new dud(
-            new dwp(dwh.a(cxa.j), List.of(new dwp.a(dqf.a(dqf.b(dqf.b(ic.b.q()), dqf.a(ic.b.q(), efa.c))), dwh.a(cxa.i)))),
-            dqf.c(List.of(cxa.j, cxa.sI)),
-            bjn.a(2, 6),
-            2
-         )
-      );
-      qk.a($$0, m, dsc.ac);
-      qk.a($$0, n, dsc.n);
-      qk.a($$0, o, dsc.o);
-      qk.a($$0, p, dsc.k, new dvb(efa.e.g(), true, 4, 1, il.a(cwy::r, cxa.b, cxa.c, cxa.e, cxa.g, cxa.sJ, cxa.qz, cxa.qN, cxa.j)));
-      qk.a($$0, q, dsc.k, new dvb(efa.e.g(), true, 4, 1, il.a(cwy::r, cxa.dP, cxa.qP, cxa.iC)));
-      qk.a($$0, r, dsc.k, new dvb(efa.c.g(), true, 4, 1, il.a(cwy::r, cxa.b, cxa.c, cxa.e, cxa.g, cxa.sJ, cxa.qz, cxa.qN, cxa.j, cxa.dP, cxa.qP, cxa.iC)));
+   public static void a(ph<dtf<?, ?>> $$0) {
+      qm.a($$0, a, dts.J, new dwq(false, ImmutableList.of(), null));
+      qm.a($$0, b, dts.L, dvv.a(aov.a, true));
+      qm.a($$0, c, dts.L, dvv.a());
+      qm.a($$0, d, dts.l);
+      qm.a($$0, e, dts.K);
    }
 }
